platform/gitea/chart/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: swim-gitops
spec:
  host: gitea.apps-crc.testing
  to:
    kind: Service
    name: gitea-http
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
